tests/parser/tests/cases/should_fail/malformed_function_type/case.stderr
error: Failed to parse
 --> $DIR/case.hash:1:20
1 |   str_eq: (str, str) > str;
  |                      ^ here
  = note: Unexpectedly encountered a `>`. Consider adding a `;`
